Set up initial express app
From the express app generator. Also set up babel - the inrupt client
libraries are ES6 and need a transpiler so they're compatible with Node.

The Solid demo page is now available at `/solid`. Currently the JS on
this page doesn't work as it's not transpiled by babel.

Note the new commands in `package.json`. Use `npm run dev` now to run
the app locally.

--- a/src/views/solid.html
+++ b/src/views/solid.html
@@ -5,8 +5,8 @@
    <head>
      <meta charset="utf-8" />
      <title>Getting Started: Inrupt JavaScript Client Libraries</title>
-     <script defer src="./index.js"></script>
-     <link rel="stylesheet" href="my-demo.css" />
+     <script defer src="/javascripts/solid.js"></script>
+     <link rel="stylesheet" href="/stylesheets/solid.css" />
    </head>
 
    <body>
