Update default WebID for testing

--- a/src/views/solid/login.jade
+++ b/src/views/solid/login.jade
@@ -5,5 +5,5 @@ block content
   form(action='/solid/login', method='post')
     label
       | WebID
-      input(type='text', name='webid', value='http://localhost:3000/profile/card#me')
+      input(type='text', name='webid', value='http://localhost:3000/local/profile/card#me')
     input(type='submit', name='Login')
