--- a/src/views/login/login.jade
+++ b/src/views/login/login.jade
@@ -2,7 +2,7 @@ extends ../layout
 
 block content
   h1 Login with your WebID 
-  form(action='/solid/login', method='post')
+  form(action='/login', method='post')
     label
       | WebID
       input(type='text', name='webid', value='http://localhost:3000/local/profile/card#me')
